--- a/package.json
+++ b/package.json
@@ -1,23 +1,67 @@
 {
-  "name": "vanilla-app-template",
-  "private": true,
+  "name": "goit-advancedjs-hw-01",
   "version": "1.0.0",
-  "type": "module",
+  "description": "Цей проект було створено за допомогою Vite. Для знайомства та налаштування\r додаткових можливостей [звернись до документації](https://vitejs.dev/).",
+  "main": "vite.config.js",
+  "dependencies": {
+    "ansi-regex": "^6.0.1",
+    "ansi-styles": "^6.2.1",
+    "balanced-match": "^1.0.2",
+    "brace-expansion": "^2.0.1",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "cross-spawn": "^7.0.3",
+    "eastasianwidth": "^0.2.0",
+    "emoji-regex": "^9.2.2",
+    "esbuild": "^0.21.5",
+    "foreground-child": "^3.3.0",
+    "glob": "^11.0.0",
+    "is-fullwidth-code-point": "^3.0.0",
+    "isexe": "^2.0.0",
+    "jackspeak": "^4.0.1",
+    "lru-cache": "^11.0.0",
+    "minimatch": "^10.0.1",
+    "minipass": "^7.1.2",
+    "nanoid": "^3.3.7",
+    "package-json-from-dist": "^1.0.0",
+    "path-key": "^3.1.1",
+    "path-scurry": "^2.0.0",
+    "picocolors": "^1.1.0",
+    "picomatch": "^2.3.1",
+    "postcss": "^8.4.47",
+    "postcss-sort-media-queries": "^5.2.0",
+    "rollup": "^4.22.4",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
+    "signal-exit": "^4.1.0",
+    "simplelightbox": "^2.14.3",
+    "sort-css-media-queries": "^2.2.0",
+    "source-map-js": "^1.2.1",
+    "string-width": "^5.1.2",
+    "string-width-cjs": "^4.2.3",
+    "strip-ansi": "^7.1.0",
+    "strip-ansi-cjs": "^6.0.1",
+    "vite": "^5.4.6",
+    "vite-plugin-full-reload": "^1.2.0",
+    "vite-plugin-html-inject": "^1.1.2",
+    "which": "^2.0.2",
+    "wrap-ansi": "^8.1.0",
+    "wrap-ansi-cjs": "^7.0.0"
+  },
   "scripts": {
     "dev": "vite",
-    "build": "vite build --base=/vanilla-app-template/",
+    "build": "vite build --base=/goit-advancedjs-hw-01/",
     "preview": "vite preview"
   },
-  "devDependencies": {
-    "glob": "^11.0.0",
-    "postcss": "^8.4.41",
-    "postcss-sort-media-queries": "^5.2.0",
-    "vite": "^5.4.6"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/d-luhova/goit-advancedjs-hw-01.git"
   },
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "dependencies": {
-    "vite-plugin-full-reload": "^1.2.0",
-    "vite-plugin-html-inject": "^1.1.2"
-  }
+  "bugs": {
+    "url": "https://github.com/d-luhova/goit-advancedjs-hw-01/issues"
+  },
+  "homepage": "https://github.com/d-luhova/goit-advancedjs-hw-01#readme"
 }
